update login and signup spacing issues

--- a/client/src/components/AceEditor/editor.css
+++ b/client/src/components/AceEditor/editor.css
@@ -11,9 +11,9 @@
     text-decoration: underline;
 }
 
-.tabs {
+/* .tabs {
     width: 500px;
-}
+} */
 
 .tabs .tab a{
     color:#000;
